--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "James Smith <james@loopj.com>",
   "license": "MIT",
   "dependencies": {
-    "ar-drone": "^0.3.3"
+    "ar-drone": "^0.3.3",
+    "dotenv": "^1.1.0"
   }
 }
